// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> matches snapshot 1`] = `
<Link
  href="sequi facilis corporis sed veritatis quidem praesentium"
>
  <Button
    displayType="outline"
  >
    magnam fugiat error molestiae laborum est possimus
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 2`] = `
<Link
  href="aut enim iure facilis ut explicabo iure"
>
  <Button
    displayType="outline"
  >
    vitae occaecati officia iure nisi ut maiores
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 3`] = `
<Link
  href="fuga reprehenderit soluta non omnis consequatur enim"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 4`] = `
<Link
  href="omnis adipisci eius laborum eius aut illo"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 5`] = `
<Link
  href="tempora aut sint aperiam occaecati illum animi"
>
  <Button
    displayType="outline"
  >
    vel provident dicta perferendis dolorum cupiditate illum
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 6`] = `
<Link
  href="ut assumenda sint quia sed exercitationem omnis"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 7`] = `
<Link
  href="adipisci mollitia iste itaque omnis debitis rem"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 8`] = `
<Link
  href="eaque nisi cum ducimus nemo doloremque maiores"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 9`] = `
<Link
  href="non itaque voluptas ea ducimus autem sit"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 10`] = `
<Link
  href="quam nulla est unde sit ex expedita"
>
  <Button
    displayType="outline"
  >
    est doloremque explicabo eaque necessitatibus sit suscipit
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 11`] = `
<Link
  href="necessitatibus maiores ullam quae corporis qui aut"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 12`] = `
<Link
  href="voluptate in sunt occaecati nulla aut sunt"
>
  <Button
    displayType="outline"
  >
    est rerum at sint dolores fugiat quis
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 13`] = `
<Link
  href="voluptas culpa et vero repellat eveniet assumenda"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 14`] = `
<Link
  href="consectetur soluta inventore laudantium dolor sint officiis"
>
  <Button
    displayType="outline"
  >
    qui dignissimos dolore qui voluptatem cumque nihil
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 15`] = `
<Link
  href="est unde rem similique et maxime quia"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 16`] = `
<Link
  href="distinctio autem quam qui facere in ut"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 17`] = `
<Link
  href="at modi occaecati illum laborum quos eum"
>
  <Button
    displayType="outline"
  >
    voluptate sit saepe assumenda deserunt consequatur itaque
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 18`] = `
<Link
  href="in fugit in rerum libero odit aut"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 19`] = `
<Link
  href="ut ducimus fugiat et et aut quidem"
>
  <Button
    displayType="outline"
  >
    voluptatibus libero aut autem ut ullam et
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 20`] = `
<Link
  href="sint fugiat maiores autem est esse quos"
>
  <Button
    displayType="outline"
  >
    minus deserunt nihil quasi minus quo sunt
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 21`] = `
<Link
  href="earum animi quis expedita et optio consequatur"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 22`] = `
<Link
  href="provident eaque atque quos rerum nobis nam"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 23`] = `
<Link
  href="occaecati et consequatur consectetur sunt molestiae cupiditate"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 24`] = `
<Link
  href="ipsa consequuntur quidem dolorem quia consequatur omnis"
>
  <Button
    displayType="outline"
  >
    ab assumenda animi non quis quis nobis
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 25`] = `
<Link
  href="aliquam molestiae occaecati a culpa facilis eligendi"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 26`] = `
<Link
  href="voluptate voluptatem est eius dolorem amet quia"
>
  <Button
    displayType="outline"
  >
    quia aut sint cumque sunt mollitia quibusdam
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 27`] = `
<Link
  href="eum repudiandae minima temporibus ducimus quia assumenda"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 28`] = `
<Link
  href="voluptas rem repellendus nihil repudiandae aliquid ex"
>
  <Button
    displayType="outline"
  >
    architecto ut corrupti voluptatem quia dolores dolor
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 29`] = `
<Link
  href="sequi perferendis nostrum aliquid ea animi architecto"
>
  <Button
    displayType="outline"
  >
    accusantium vel enim sint voluptatem porro ut
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 30`] = `
<Link
  href="sed qui repellat assumenda et incidunt aut"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 31`] = `
<Link
  href="non sit et ut voluptatem quia dolor"
>
  <Button
    displayType="outline"
  >
    View
  </Button>
</Link>
`;

exports[`<Footer /> matches snapshot 32`] = `
<Link
  href="sed nobis excepturi saepe autem quis molestiae"
>
  <Button
    displayType="outline"
  >
    et dicta odit vel quisquam qui harum
  </Button>
</Link>
`;
